--- a/scss/main.scss
+++ b/scss/main.scss
@@ -95,7 +95,7 @@ body {
     &__grid {
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
-
+      gap: 1.2rem;
       grid-template-areas:
         "start mid1 end"
         "start mid2 end";
